[gd_scene load_steps=8 format=3 uid="uid://bqiqgr04awesv"]

[ext_resource type="Script" uid="uid://dy86d3lb2a3mv" path="res://scripts/GameOver.gd" id="1_61w2s"]
[ext_resource type="FontFile" uid="uid://drapyqg6uu0ga" path="res://assets/fonts/Retro Gaming.ttf" id="2_jw6e5"]
[ext_resource type="Texture2D" uid="uid://pfdrfa2ax6bk" path="res://assets/backgrounds/game_over_background.png" id="3_jw6e5"]
[ext_resource type="Texture2D" uid="uid://jfdvavo8mdjd" path="res://assets/menu/plate_menu_1.png" id="4_wa2qn"]
[ext_resource type="Theme" uid="uid://bioe35ttt2ys0" path="res://Tema/pause_menu.tres" id="5_cyfkl"]
[ext_resource type="AudioStream" uid="uid://wur8gb3xen1s" path="res://assets/soundtrack/background_gameover.mp3" id="6_5i0af"]
[ext_resource type="AudioStream" uid="uid://cslsb6w827ql3" path="res://assets/soundtrack/select_button.mp3" id="7_nh6my"]

[node name="game_over" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_61w2s")

[node name="GameOverScreen" type="CanvasLayer" parent="."]
process_mode = 3

[node name="Sprite2D" type="Sprite2D" parent="GameOverScreen"]
position = Vector2(578, 339)
scale = Vector2(0.752441, 0.752441)
texture = ExtResource("3_jw6e5")

[node name="ColorRect" type="ColorRect" parent="GameOverScreen"]
offset_right = 1153.0
offset_bottom = 648.0
color = Color(0, 0, 0, 0.631373)

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverScreen"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -277.0
offset_top = -201.0
offset_right = 277.0
offset_bottom = -89.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40

[node name="GameOverTitle" type="Label" parent="GameOverScreen/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.85098, 0.737255, 0.294118, 1)
theme_override_colors/font_outline_color = Color(0.282353, 0.196078, 0.113725, 1)
theme_override_fonts/font = ExtResource("2_jw6e5")
theme_override_font_sizes/font_size = 32
text = "VOCÊ FOI PICADO ATÉ O FIM!"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="GameOverScreen/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.85098, 0.737255, 0.294118, 1)
theme_override_colors/font_outline_color = Color(0.282353, 0.196078, 0.113725, 1)
theme_override_fonts/font = ExtResource("2_jw6e5")
theme_override_font_sizes/font_size = 24
text = "SCORE: 0"
horizontal_alignment = 1

[node name="RestartPlate" type="Sprite2D" parent="GameOverScreen/VBoxContainer"]
position = Vector2(279, 121.875)
scale = Vector2(0.504302, 0.504302)
texture = ExtResource("4_wa2qn")

[node name="RestartButton" type="Button" parent="GameOverScreen/VBoxContainer/RestartPlate"]
offset_left = -345.0
offset_top = 16.0
offset_right = 357.0
offset_bottom = 149.0
theme = ExtResource("5_cyfkl")
theme_type_variation = &"FlatButton"
theme_override_colors/font_hover_color = Color(0.945098, 0.854902, 0.509804, 1)
theme_override_colors/font_outline_color = Color(0.282353, 0.196078, 0.113725, 1)
theme_override_colors/font_color = Color(0.85098, 0.737255, 0.294118, 1)
theme_override_fonts/font = ExtResource("2_jw6e5")
theme_override_font_sizes/font_size = 32
text = "TENTAR NOVAMENTE"

[node name="MenuPlate" type="Sprite2D" parent="GameOverScreen/VBoxContainer"]
position = Vector2(278.686, 197.75)
scale = Vector2(0.504302, 0.504302)
texture = ExtResource("4_wa2qn")

[node name="MenuButton" type="Button" parent="GameOverScreen/VBoxContainer/MenuPlate"]
offset_left = -346.0
offset_top = 18.0
offset_right = 356.0
offset_bottom = 151.0
theme = ExtResource("5_cyfkl")
theme_type_variation = &"FlatButton"
theme_override_colors/font_hover_color = Color(0.945098, 0.854902, 0.509804, 1)
theme_override_colors/font_outline_color = Color(0.282353, 0.196078, 0.113725, 1)
theme_override_colors/font_color = Color(0.85098, 0.737255, 0.294118, 1)
theme_override_fonts/font = ExtResource("2_jw6e5")
theme_override_font_sizes/font_size = 32
text = "VOLTAR AO MENU"

[node name="ExitPlate" type="Sprite2D" parent="GameOverScreen/VBoxContainer"]
position = Vector2(279, 272.875)
scale = Vector2(0.504302, 0.504302)
texture = ExtResource("4_wa2qn")

[node name="ExitButton" type="Button" parent="GameOverScreen/VBoxContainer/ExitPlate"]
offset_left = -349.0
offset_top = 16.0
offset_right = 357.0
offset_bottom = 147.0
theme = ExtResource("5_cyfkl")
theme_type_variation = &"FlatButton"
theme_override_colors/font_hover_color = Color(0.945098, 0.854902, 0.509804, 1)
theme_override_colors/font_outline_color = Color(0.282353, 0.196078, 0.113725, 1)
theme_override_colors/font_color = Color(0.85098, 0.737255, 0.294118, 1)
theme_override_fonts/font = ExtResource("2_jw6e5")
theme_override_font_sizes/font_size = 32
text = "SAIR DO JOGO"

[node name="Background" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_5i0af")
autoplay = true
parameters/looping = true

[node name="ButtonClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_nh6my")
parameters/looping = false

[connection signal="pressed" from="GameOverScreen/VBoxContainer/RestartPlate/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="GameOverScreen/VBoxContainer/MenuPlate/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="GameOverScreen/VBoxContainer/ExitPlate/ExitButton" to="." method="_on_exit_button_pressed"]
